<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <Button
        android:id="@+id/RequestPoL"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="215dp"
        android:onClick="btnDiscover"
        android:text="@string/activate_bluetooth" />

    <Button
        android:id="@+id/Scanning"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-197dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="21dp"
        android:layout_toEndOf="@+id/RequestPoL"
        android:onClick="btnDiscover"
        android:text="@string/toggle_scanning" />

    <!--<Button-->
        <!--android:id="@+id/Scanning"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_below="@+id/RequestPoL"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginStart="70dp"-->
        <!--android:layout_marginTop="7dp"-->
        <!--android:layout_marginEnd="70dp"-->
        <!--android:onClick="btnDiscover"-->
        <!--android:text="Scan" />-->


    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/Scanning"
        android:layout_marginTop="15dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvNewDevices"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text=""
        android:textSize="16sp" />


    <EditText
        android:id="@+id/textAmount"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_below="@+id/destAddresses"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_1" />

    <Spinner
        android:id="@+id/myaddresses"
        android:layout_width="239dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/destAddresses"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_below="@+id/myaddresses"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/sendPublic"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/destAddresses"
        android:onClick="applyTransaction"
        android:text="@string/apply_for_transaction" />

    <Button
        android:id="@+id/sendLocation"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sendPublic"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/myaddresses"
        android:onClick="confirmPoL"
        android:text="@string/confirm" />


</RelativeLayout>